# Option-26

./: .env.example  .gitignore  ANALYSIS_REPORT.md  Analysis.ipynb  Cargo.toml  auth_manager.py  auto_auth.py  auto_otp.py  build_model.py  build_render.sh  collect_data.py  nubra_client.py  realtime_model.py  realtime_vol.py  refresh_token.sh  render.yaml  render_server.py  requirements.txt  requirements_deploy.txt  run.sh  run_all.sh  token_refresh.py  vol_server.py
.github/workflows/: release-models.yml
examples/: basic_usage.rs
frontend/: app.js  index.html
models/: data_pipeline.py  deep_models.py  deep_strategy_recommender.py  ensemble.py  strategy_engine.py  strategy_recommender.py  vol_models.py
src/: cache.rs  collector.rs  error.rs  lib.rs  main.rs  models.rs  streaming.rs
src/api/: mod.rs  nubario.rs
trained_models/: banknifty_ensemble.pkl  finnifty_ensemble.pkl  midcpnifty_ensemble.pkl
